Added delete route for web, for api as well as tests for both routes and swagger documentation
